--- a/kfes-react-app/package.json
+++ b/kfes-react-app/package.json
@@ -7,7 +7,9 @@
     "@fullcalendar/daygrid": "^4.3.0",
     "@fullcalendar/react": "^4.3.0",
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.15",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-scripts": "3.2.0",
