--- a/kfes-react-app/package.json
+++ b/kfes-react-app/package.json
@@ -6,6 +6,7 @@
     "@fullcalendar/core": "^4.3.1",
     "@fullcalendar/daygrid": "^4.3.0",
     "@fullcalendar/react": "^4.3.0",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "react": "^16.12.0",
