--- a/kfes-react-app/package.json
+++ b/kfes-react-app/package.json
@@ -15,6 +15,7 @@
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-scroll": "^1.7.14",
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1"
   },
